<resources>
    <string name="app_name">Build fuild UI with Layout Editor</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="job_title">JobTitle</string>
    <string name="employe_infotext">Employee info text here...</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="employee_image_text">employee_image</string>

</resources>
